--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
 #root {
-  max-width: 1280px;
+  display: flex;
+  flex-direction: column;
+  width: 100%; /* Faz com que o elemento ocupe toda a largura disponível */
+  max-width: none; /* Remove o limite de largura máxima */
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
+  margin-bottom: 0;
 }
 
 .logo {
